--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+wheel==0.38.4
 Flask==2.2.2
 grpcio==1.50.0
 grpcio-tools==1.50.0
 numpy==1.23.5
 Pillow==9.3.0
 tflite-runtime==2.10.0
-
+requests==2.28.2
+iperf3==0.1.11
