--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,26 @@
-wheel==0.38.4
-numpy==1.23.5
-Pillow==9.3.0
-tflite-runtime==2.10.0
-requests==2.28.2
+asn1crypto==0.24.0
+certifi==2018.8.24
+chardet==3.0.4
+colorzero==1.1
+cryptography==2.6.1
+entrypoints==0.3
+gpiozero==1.6.2
+idna==2.6
 iperf3==0.1.11
-
+keyring==17.1.1
+keyrings.alt==3.1.1
+ntplib==0.4.0
+numpy==1.21.6
+Pillow==9.5.0
+pycrypto==2.6.1
+PyGObject==3.30.4
+python-apt==1.8.4.3
+pyxdg==0.25
+requests==2.21.0
+RPi.GPIO==0.7.0
+SecretStorage==2.3.1
+six==1.12.0
+spidev==3.5
+ssh-import-id==5.7
+tflite-runtime==2.9.1
+urllib3==1.24.1
