--- a/ntp.conf
+++ b/ntp.conf
@@ -15,7 +15,7 @@ filegen clockstats file clockstats type day enable
 
 
 # You do need to talk to an NTP server or two (or three).
-server COM-C132-M34579
+server 192.168.10.3
 
 # pool.ntp.org maps to about 1000 low-stratum NTP servers.  Your server will
 # pick a different set every time it starts up.  Please consider joining the
